[tool.poetry]
name = "hexlet-code"
version = "0.1.7"
description = "Brain training package"
classifiers = [
  "Topic :: Games/Entertainment"
]
authors = ["Choolkov <s.v.chulkov@ya.ru>"]
repository = "https://github.com/Choolkov/python-project-lvl1.git"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"